--- a/index.html
+++ b/index.html
@@ -1,44 +1,111 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]>      <html class="no-js"> <![endif]-->
-<html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Fun-sisi</title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
-    </head>
-    <body>
-        <!--First head section for the virtual tours and travel-->
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" crossorigin="anonymous">
+    <title>Fun-Sisi Virtual Tours</title>
+</head>
+<body>
+    <div class="landing-page">
         <header>
-            <h1>Fun-sisi</h1>
-        <nav>
-            <ul>
-                <li><a href="#home">Home</a></li>
-                <li><a href="#tours">Virtual Tours</a></li>
-                <li><a href="#stations">Stations</a></li>
-                <li><a href="#about">About Us</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
-        </nav>
-        </header>
-        <section id="home">
-            <div class="hero">
-                <h2>Explore the World Virtually</h2>
-                <p>Book your virtual tour now and experience the beauty of destinations from the comfort of your home.</p>
-                <a href="#tours" class="btn">Book a Tour</a>
+            <div class="container">
+                <a href="#" class="logo">FUN<b>SISI</b></a>
+                <ul class="links">
+                    <li>Home</li>
+                    <li>About Us</li>
+                    <li>Work</li>
+                    <li>Info</li>
+                    <li>Get Started</li>
+                </ul>
             </div>
-        </section>
-    
-        <!-- More sections for Virtual Tours, Stations, About Us, and Contact -->
-    
-        <footer>
-            <p>&copy; 2023 Virtual Tours</p>
-        </footer>
-        <script src="" async defer></script>
-    </body>
+        </header>
+        <div class="content">
+            <div class="container">
+                <div class="info">
+                    <h1>Magic of tours</h1>
+                    <p>Experience world scenic views, adventures, tourism adventures from the comfort of your proximity</p>
+                    <button>Fun me</button>
+                </div>
+                <div class="image">
+                    <img src="moon-girl.jpg">
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="scroll-section tours-section">
+        <div class="container">
+            <h2 class="section-title">Embark on Virtual Adventures</h2>
+            <div class="tour-item">
+                <img src="virtual-tour.png" alt="Virtual Tours Icon" class="tour-icon">
+                <h2>Virtual Tours</h2>
+                <p>Step into the magic of virtual reality and explore breathtaking destinations from the comfort of your home.</p>
+            </div>
+            <div class="tour-item">
+                <img src="book-tour.png" alt="Book a Tour Icon" class="tour-icon">
+                <h2>Book a Tour</h2>
+                <p>Ready for an adventure? Book your virtual tour now and unlock a world of exciting experiences.</p>
+            </div>
+            <div class="tour-item">
+                <img src="read-more.png" alt="Read More Icon" class="tour-icon">
+                <h2>Read More</h2>
+                <p>Discover behind-the-scenes stories and fascinating details about our virtual tours and destinations.</p>
+            </div>
+        </div>
+    </div>
+    <div class="scroll-section featured-section">
+        <div class="container">
+            <h2 class="section-title">Featured Destinations</h2>
+            <div class="featured-destinations-container">
+                <div class="featured-destination">
+                    <img src="city-of-light.jpeg" alt="Featured Destination 1">
+                    <h3>City of Lights</h3>
+                    <p>Explore the dazzling cityscape of Paris from the Eiffel Tower to the Louvre.</p>
+                    <a href="#learn-more">Learn More</a>
+                </div>
+                <div class="featured-destination">
+                    <img src="game-reserves.jpeg" alt="Featured Destination 2">
+                    <h3>Tropical Paradise</h3>
+                    <p>Immerse yourself in the beauty of tropical islands with crystal-clear waters.</p>
+                    <a href="#learn-more">Learn More</a>
+                </div>
+                <div class="featured-destination">
+                    <img src="historical wonders.jpeg" alt="Featured Destination 3">
+                    <h3>Historical Wonders</h3>
+                    <p>Step back in time and explore the wonders of ancient civilizations.</p>
+                    <a href="#learn-more">Learn More</a>
+                </div>
+            </div>
+        </div>
+    </div>
+<div class="scroll-section contact-section">
+    <div class="container">
+        <h2 class="section-title">Contact Us</h2>
+        <p>Have questions or suggestions? Feel free to contact us!</p>
+        <form class="contact-form">
+            <label for="name">Your Name</label>
+            <input type="text" id="name" name="name" required>
+
+            <label for="email">Your Email</label>
+            <input type="email" id="email" name="email" required>
+
+            <label for="message">Your Message</label>
+            <textarea id="message" name="message" required></textarea>
+
+            <button type="submit">Send Message</button>
+        </form>
+    </div>
+</div>
+</body>
+<footer class="footer-section">
+    <div class="container">
+        <p>&copy; 2023 Fun-Sisi Virtual Tours</p>
+        <div class="social-icons">
+            <a href="#" target="_blank" rel="noopener noreferrer"><i class="fab fa-facebook"></i></a>
+            <a href="#" target="_blank" rel="noopener noreferrer"><i class="fab fa-twitter"></i></a>
+            <a href="#" target="_blank" rel="noopener noreferrer"><i class="fab fa-instagram"></i></a>
+        </div>
+    </div>
+</footer>
 </html>
