--- a/index.html
+++ b/index.html
@@ -84,16 +84,26 @@
         <h2 class="section-title">Contact Us</h2>
         <p>Have questions or suggestions? Feel free to contact us!</p>
         <form class="contact-form">
-            <label for="name">Your Name</label>
+            <label for="name">Name</label>
             <input type="text" id="name" name="name" required>
 
-            <label for="email">Your Email</label>
+            <label for="email">Email</label>
             <input type="email" id="email" name="email" required>
 
-            <label for="message">Your Message</label>
+            <label for="message">Message</label>
             <textarea id="message" name="message" required></textarea>
 
-            <button type="submit">Send Message</button>
+            <button>
+                <div class="svg-wrapper-1">
+                  <div class="svg-wrapper">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24">
+                      <path fill="none" d="M0 0h24v24H0z"></path>
+                      <path fill="currentColor" d="M1.946 9.315c-.522-.174-.527-.455.01-.634l19.087-6.362c.529-.176.832.12.684.638l-5.454 19.086c-.15.529-.455.547-.679.045L12 14l6-8-8 6-8.054-2.685z"></path>
+                    </svg>
+                  </div>
+                </div>
+                <span>Send</span>
+              </button>
         </form>
     </div>
 </div>
