--- a/index.html
+++ b/index.html
@@ -108,14 +108,39 @@
     </div>
 </div>
 </body>
-<footer class="footer-section">
+<!-- Footer Section -->
+<footer class="scroll-section footer-section">
     <div class="container">
-        <p>&copy; 2023 Fun-Sisi Virtual Tours</p>
+        <div class="footer-content">
+            <!-- Navigation Links -->
+            <div class="footer-links">
+                <h3>Quick Links</h3>
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Virtual Tours</a></li>
+                    <li><a href="#">Stations</a></li>
+                    <li><a href="#">About Us</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+            </div>
+
+            <!-- Subscription Form -->
+            <div class="subscribe">
+                <h3>Subscribe to Our Newsletter</h3>
+                <form>
+                    <input type="email" placeholder="Enter your email" required>
+                </form>
+            </div>
+        
+        </div>
+
+        <!-- Social Media Icons -->
         <div class="social-icons">
             <a href="#" target="_blank" rel="noopener noreferrer"><i class="fab fa-facebook"></i></a>
-            <a href="#" target="_blank" rel="noopener noreferrer"><i class="fab fa-twitter"></i></a>
+            <a href="#" target="_blank" rel="noopener noreferrer"><i class="fab fa-x"></i></a>
             <a href="#" target="_blank" rel="noopener noreferrer"><i class="fab fa-instagram"></i></a>
         </div>
     </div>
 </footer>
+
 </html>
