--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <button>Fun me</button>
                 </div>
                 <div class="image">
-                    <img src="moon-girl.jpg">
+                    <img src="assets/moon-girl.jpg">
                 </div>
             </div>
         </div>
@@ -38,17 +38,17 @@
         <div class="container">
             <h2 class="section-title">Embark on Virtual Adventures</h2>
             <div class="tour-item">
-                <img src="virtual-tour.png" alt="Virtual Tours Icon" class="tour-icon">
+                <img src="assets/virtual-tour.png" alt="Virtual Tours Icon" class="tour-icon">
                 <h2>Virtual Tours</h2>
                 <p>Step into the magic of virtual reality and explore breathtaking destinations from the comfort of your home.</p>
             </div>
             <div class="tour-item">
-                <img src="book-tour.png" alt="Book a Tour Icon" class="tour-icon">
+                <img src="assets/book-tour.png" alt="Book a Tour Icon" class="tour-icon">
                 <h2>Book a Tour</h2>
                 <p>Ready for an adventure? Book your virtual tour now and unlock a world of exciting experiences.</p>
             </div>
             <div class="tour-item">
-                <img src="read-more.png" alt="Read More Icon" class="tour-icon">
+                <img src="assets/read-more.png" alt="Read More Icon" class="tour-icon">
                 <h2>Read More</h2>
                 <p>Discover behind-the-scenes stories and fascinating details about our virtual tours and destinations.</p>
             </div>
@@ -59,19 +59,19 @@
             <h2 class="section-title">Featured Destinations</h2>
             <div class="featured-destinations-container">
                 <div class="featured-destination">
-                    <img src="city-of-light.jpeg" alt="Featured Destination 1">
+                    <img src="assets/city-of-light.jpeg" alt="Featured Destination 1">
                     <h3>City of Lights</h3>
                     <p>Explore the dazzling cityscape of Paris from the Eiffel Tower to the Louvre.</p>
                     <a href="#learn-more">Learn More</a>
                 </div>
                 <div class="featured-destination">
-                    <img src="game-reserves.jpeg" alt="Featured Destination 2">
+                    <img src="assets/game-reserves.jpeg" alt="Featured Destination 2">
                     <h3>Tropical Paradise</h3>
                     <p>Immerse yourself in the beauty of tropical islands with crystal-clear waters.</p>
                     <a href="#learn-more">Learn More</a>
                 </div>
                 <div class="featured-destination">
-                    <img src="historical wonders.jpeg" alt="Featured Destination 3">
+                    <img src="assets/historical wonders.jpeg" alt="Featured Destination 3">
                     <h3>Historical Wonders</h3>
                     <p>Step back in time and explore the wonders of ancient civilizations.</p>
                     <a href="#learn-more">Learn More</a>
