styles.css && Background video

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                     <li>About Us</li>
                     <li>Work</li>
                     <li>Info</li>
-                    <li>Get Started</li>
+                    <a href="login.html"><li>Get Started</li></a>
                 </ul>
             </div>
         </header>
